--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^2.6.0",
+    "@heroicons/react": "^2.0.18",
+    "@react-oauth/google": "^0.11.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "gapi-script": "^1.2.0",
+    "js-cookie": "^3.0.5",
+    "mongoose": "^7.3.0",
     "next": "13.4.3",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
+    "react-google-login": "^5.2.2",
+    "react-icons": "^4.8.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   }
 }
